[gd_scene load_steps=11 format=3 uid="uid://58pp8togc4i"]

[ext_resource type="FontFile" uid="uid://dqteyeiuw4012" path="res://assets/start_screen/Born2bSportyV2.ttf" id="1_hbrno"]
[ext_resource type="Script" uid="uid://bm8j8y1mkxs4m" path="res://scripts/player_hud/player_hud.gd" id="1_k42ch"]
[ext_resource type="Texture2D" uid="uid://dvkhfha4rqkc7" path="res://assets/player_hud/profile.png" id="3_j0avd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qv0el"]
bg_color = Color(0, 0, 0, 0.6)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0392157, 0.741176, 0.776471, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2equ"]
content_margin_left = 30.0
content_margin_top = 5.0
content_margin_right = 30.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0392157, 0.741176, 0.776471, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sofjs"]
content_margin_left = 30.0
content_margin_top = 5.0
content_margin_right = 30.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0392157, 0.741176, 0.776471, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1th2"]
content_margin_left = 30.0
content_margin_top = 5.0
content_margin_right = 30.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0392157, 0.741176, 0.776471, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j0avd"]
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.0392157, 0.741176, 0.776471, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pco3n"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7sx8l"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.0392157, 0.741176, 0.776471, 1)
border_blend = true

[node name="PlayerHud" type="Control" node_paths=PackedStringArray("inventory")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k42ch")
font_file = ExtResource("1_hbrno")
font_color = Color(0.0392157, 0.741176, 0.776471, 1)
inventory = NodePath("TabContainer/Inventory")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = 689.0
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.702579, 0.735963)
theme_override_fonts/font = ExtResource("1_hbrno")
theme_override_font_sizes/font_size = 70
theme_override_styles/panel = SubResource("StyleBoxFlat_qv0el")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_i2equ")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_sofjs")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_e1th2")
tab_alignment = 1
current_tab = 0

[node name="Stats" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Stats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Stats/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="picture" type="Button" parent="TabContainer/Stats"]
layout_mode = 0
offset_left = 75.0
offset_top = 25.0
offset_right = 1107.0
offset_bottom = 1569.0
scale = Vector2(0.2, 0.2)
theme_override_styles/focus = SubResource("StyleBoxFlat_j0avd")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_j0avd")
theme_override_styles/disabled = SubResource("StyleBoxFlat_j0avd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_j0avd")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_j0avd")
theme_override_styles/hover = SubResource("StyleBoxFlat_j0avd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j0avd")
theme_override_styles/normal = SubResource("StyleBoxFlat_j0avd")
button_mask = 0
icon = ExtResource("3_j0avd")

[node name="informations" type="Label" parent="TabContainer/Stats"]
layout_mode = 0
offset_left = 300.0
offset_top = 38.0
offset_right = 821.0
offset_bottom = 331.0
theme_override_colors/font_color = Color(0.0392157, 0.741176, 0.776471, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_hbrno")
theme_override_font_sizes/font_size = 66
text = "Name: Placeholder
Age: Placeholder
Gender: Placeholder
Id: Placeholder"

[node name="weapon_name" type="Label" parent="TabContainer/Stats"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.494
anchor_right = 0.494
offset_left = -227.58
offset_top = 399.155
offset_right = 226.42
offset_bottom = 656.155
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0392157, 0.741176, 0.776471, 1)
theme_override_fonts/font = ExtResource("1_hbrno")
theme_override_font_sizes/font_size = 82
text = "Weapons"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Map"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Map/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Inventory" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="items" type="VBoxContainer" parent="TabContainer/Inventory/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Mission" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Mission"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Mission/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="headline" type="Label" parent="TabContainer/Mission"]
layout_mode = 1
offset_left = 61.0
offset_top = 38.0
offset_right = 209.0
offset_bottom = 102.0
theme_override_colors/font_color = Color(0.0392157, 0.741176, 0.776471, 1)
theme_override_fonts/font = ExtResource("1_hbrno")
theme_override_font_sizes/font_size = 86
text = "Mission:"

[node name="mission_log" type="Label" parent="TabContainer/Mission"]
layout_mode = 0
offset_left = 188.0
offset_top = 170.0
offset_right = 464.0
offset_bottom = 234.0
theme_override_colors/font_color = Color(0.0392157, 0.741176, 0.776471, 1)
theme_override_fonts/font = ExtResource("1_hbrno")
theme_override_font_sizes/font_size = 66
text = "Placeholder"

[node name="exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.963
anchor_top = 0.106
anchor_right = 0.963
anchor_bottom = 0.106
offset_left = -117.96
offset_top = 0.519997
offset_right = 0.039917
offset_bottom = 79.52
grow_horizontal = 0
theme_override_colors/font_color = Color(0.0392157, 0.741176, 0.776471, 1)
theme_override_colors/font_focus_color = Color(0.0392157, 0.741176, 0.776471, 1)
theme_override_font_sizes/font_size = 58
theme_override_styles/focus = SubResource("StyleBoxFlat_pco3n")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_pco3n")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_pco3n")
theme_override_styles/hover = SubResource("StyleBoxFlat_pco3n")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_pco3n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pco3n")
theme_override_styles/normal = SubResource("StyleBoxFlat_pco3n")
text = "x"

[node name="main_menu" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 28.0
offset_right = 211.0
offset_bottom = 109.0
theme_override_fonts/font = ExtResource("1_hbrno")
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_7sx8l")
text = "Main Menu"

[node name="save" type="Button" parent="."]
layout_mode = 0
offset_left = 275.0
offset_top = 28.0
offset_right = 382.0
offset_bottom = 109.0
theme_override_fonts/font = ExtResource("1_hbrno")
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7sx8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_7sx8l")
text = "Save
"

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
